--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,14 +19,16 @@
     box-sizing: border-box;
 }
 
+/*
 .content{
     width: 100%;
     height: 100%;
 }
+*/
 
 .btn{
     text-align: center;
-    font-size: 1.2rem;
+    font-size: 1rem;
     background-color: #afafb0;
     border: 2px #000 solid;
     padding: 1rem;
