--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,15 +27,32 @@
 */
 
 .btn{
+    width: 50%;
     text-align: center;
     font-size: 1rem;
     background-color: #afafb0;
     border: 2px #000 solid;
     padding: 1rem;
-    margin: 0 6rem;
+    margin: 0 auto;
 }
 
 .btn a{
     text-decoration: none;
     color: #000;
+}
+
+
+.frame{
+    border: 1px #000 solid;
+    padding: 1rem;
+    margin: 1px;
+}
+
+.header{
+    display: flex;
+    justify-content: space-between;
+}
+
+.header_right{
+    text-align: right;
 }
