--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -2,22 +2,45 @@
     width: 100%;
 }
 
-.form input, textarea{
+.form p{
+    margin: 0 0 0 10px;
+}
+
+.new_mail{
+    clear: both;
+}
+
+.form input{
     outline: none;
     /* border: none; */
+    padding: 0;
+    width: 100%;
+}
+
+.form textarea{
     resize: none;
-
-    
-    display: block;
     width: 100%;
+    height: 5rem;
+    border: 1px #000 solid;
 }
 
-.form div{
-    display: flex;
-    width: 100%;
+li{
+    list-style: none;
+    float: left;
 }
 
-.form p{
-    writing-mode: horizontal-tb;
-    /* width: 100%; */
+.clear{
+    clear: both;
+}
+
+.input_frame_son{
+    padding: 0;
+    margin: 0 0 0 10px;
+    /* display: flex; */
+    /* align-items: center; */
+}
+
+.input_frame{
+    border: 1px #000 solid;
+    overflow: auto;
 }
