--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -9,7 +9,7 @@
 
     <div class="form">
     <%= form_tag("") do %>
-        <div class="input_frame">
+        <div class="input_frame purple">
             <p>Regretメール作成</p>
         </div>
         
@@ -42,6 +42,6 @@
 
 </div>
 
-    <div class=" btn">
+    <div class="btn">
         <input type="submit" value="送信">
     </div>
