--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -12,9 +12,9 @@
 
 .form input{
     outline: none;
-    border: none;
+    /* border: none; */
     padding: 0;
-    width: 100%;
+    width: 200px;
 }
 
 .form textarea{
