--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -10,7 +10,8 @@
     <p id="top_time"></p>
 
     <p class="abstract">
-    「あのとき、ああすればよかった」<br>
+    
+    鰓鰓「あのとき、ああすればよかった」<br>
     「あのとき、なんでああしなかったんだ」<br>
     そんな後悔は誰にでもあると思います。<br><br>
 
