--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -11,7 +11,7 @@
 
     <p class="abstract">
     
-    鰓鰓「あのとき、ああすればよかった」<br>
+    「あのとき、ああすればよかった」<br>
     「あのとき、なんでああしなかったんだ」<br>
     そんな後悔は誰にでもあると思います。<br><br>
 
@@ -29,7 +29,7 @@
 
 
     <div class=" btn">
-        <a href="/new">Regretメール送信画面へ</a>
+        <%= link_to("Regretメール送信画面へ", "/posts/new") %>
     </div>
 
 </div>
