--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -42,6 +42,6 @@
 </div>
 
     <div class="btn">
-        <input type="submit" value="送信">
+        <input class="submit" type="submit" value="送信">
     </div>
 <% end %>
