再起動しないと送信できない？

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -30,7 +30,7 @@
         <div class="clear input_frame">
             <ul class="input_frame_son">
                 <li>件名：</li>
-                <li class="input"><input class="width" name="subject" maxlength="12"></li>
+                <li class="input"><input class="width" name="sub" maxlength="12"></li>
             </ul>
         </div>
 
