--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -20,8 +20,7 @@
     width: 300px;
 }
 
-.form textarea{
-    resize: none;
+.textarea{
     width: 100%;
     height: 5rem;
     border: 1px #000 solid;
