--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,43 +1,48 @@
 <%= stylesheet_link_tag 'index', :media => "all" %>
 
-<div class="frame">
+<% @posts.each do |post| %>
 
-    <div class="header">
-        <p>電波</p>
-        <p class="header_right">充電</p>
+    <div class="frame">
+
+        <div class="header">
+            <p>電波</p>
+            <p class="header_right">充電</p>
+        </div>
+
+        <div class="form">
+            <div class="input_frame red">
+                <p>受信メール</p>
+            </div>
+            
+            <div class="input_frame">
+                <ul class="input_frame_son">
+                    <li>受信日時：</li>
+                    <li class="input"><%= post.datetime %></li>
+                </ul>
+            </div>
+
+            <div class="clear input_frame">
+                <ul class="input_frame_son">
+                    <li>差出人：</li>
+                    <li class="input"><%= post.name %></li>
+                </ul>
+            </div>
+
+            <div class="clear input_frame gray">
+                <ul class="input_frame_son">
+                    <li>件名：</li>
+                    <li class="input"><%= post.sub %></li>
+                </ul>
+            </div>
+
+            <div class="clear">
+                <div class="textarea"><%= post.content %></div>
+            </div>
+
+        </div>
+
     </div>
 
-    <div class="form">
-    <%= form_tag("") do %>
-        <div class="input_frame red">
-            <p>受信メール</p>
-        </div>
-        
-        <div class="input_frame">
-            <ul class="input_frame_son">
-                <li>受信日時：</li>
-                <li class="input"><input type="datetime-local" name="datetime" required></li>
-            </ul>
-        </div>
+    <div><br></div>
 
-        <div class="clear input_frame">
-            <ul class="input_frame_son">
-                <li>差出人：</li>
-                <li class="input"><input class="width" name="name" required maxlength="12"></li>
-            </ul>
-        </div>
-
-        <div class="clear input_frame gray">
-            <ul class="input_frame_son">
-                <li>件名：</li>
-                <li class="input"><input class="width" name="subject" maxlength="12"></li>
-            </ul>
-        </div>
-
-        <div class="clear">
-            <textarea name="content" required maxlength="100"></textarea>
-        </div>
-    <% end %>
-    </div>
-
-</div>
+<% end %>
