--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,10 @@
 <%= stylesheet_link_tag 'index', :media => "all" %>
 
+<div class="explain">
+    <div>Regretメール一覧</div>
+    <div class="explain2">新しい順</div>
+</div>
+
 <% @posts.each do |post| %>
 
     <div class="frame">
