--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -1,3 +1,21 @@
+.explain{
+    display: flex;
+    text-align: center;
+    letter-spacing: 2px;
+    margin-bottom: 1rem;
+}
+
+.explain div{
+    border: #000 1px solid;
+    padding: 0.25rem 0.5rem;
+    background-color: #d9d2e9ff;
+}
+
+.explain2{
+    /* 右に押し出される */
+    margin-left: auto;
+}
+
 .form{
     width: 100%;
 }
