--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -20,16 +20,19 @@
     <b>「Regretメール」</b>（雰囲気だけ）<br><br>
 
     後悔(Regret)を吐き出して、今のあなたが<br>
-    少しでも楽になれたらいいなと願っています。<br><br>
+    少しでも楽になれたらいいなと<br>
+    願っています。<br><br>
     
     他の方のメールを見るのもよし、<br>
-    気が済むまで過去にメールを送るのもよし、<br>
+    気が済むまで過去にメールを送るのもよし、<br><br><br>
     後悔の数だけ、公開されます。<br>
     </p>
 
 
     <div class="btn">
-        <%= link_to("Regretメール送信画面へ", "/posts/new") %>
+        <%= link_to "/posts/new" do %>
+            Regretメール<br>送信画面へ
+        <% end %>
     </div>
 
 </div>
