--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,12 +19,15 @@
     box-sizing: border-box;
 }
 
-/*
-.content{
-    width: 100%;
-    height: 100%;
+body{
+    background-color: aliceblue;
 }
-*/
+
+.frame{
+    width: 358px;
+    margin: 0 auto;
+    background-color: rgba(255,255,255,1);
+}
 
 .btn{
     width: 50%;
@@ -43,6 +46,7 @@
     display: block;
     transition: all 0.5s;
     cursor: pointer;
+    margin-top: 1rem;
 }
 
 .btn a:hover,
