フォント，電波アイコン，メール本文枠調整

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,8 +10,8 @@
     <div class="frame">
 
         <div class="header">
-            <p>電波</p>
-            <p class="header_right">充電</p>
+            <img src="/wave.png" alt="電波" width="25" height="20">
+            <img class="header_right" src="/battery.png" alt="充電" width="30" height="20">
         </div>
 
         <div class="form">
