--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -5,8 +5,8 @@
 <div class="frame">
 
     <div class="header">
-        <p>電波</p>
-        <p class="header_right">充電</p>
+        <img src="/wave.png" alt="電波" width="25" height="20">
+        <img class="header_right" src="/battery.png" alt="充電" width="30" height="20">
     </div>
 
     <div class="form">
@@ -36,7 +36,8 @@
         </div>
 
         <div class="clear">
-            <textarea name="content" required maxlength="100"></textarea>
+            <textarea name="content" required maxlength="50"
+              placeholder="後悔していることを書いてください。(50文字まで)"></textarea>
         </div>
     </div>
 
