--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,13 +20,20 @@
 }
 
 body{
+    font-family: "Yu Gothic Medium", sans-serif;
     background-color: aliceblue;
 }
 
 .frame{
-    width: 358px;
-    margin: 0 auto;
+    margin: 0 25%;
     background-color: rgba(255,255,255,1);
+}
+
+/* スマホ対応 */
+@media(max-width:768px){
+    .frame{
+        margin: 0;
+    }
 }
 
 .btn{
@@ -62,10 +69,7 @@ body{
 .header{
     display: flex;
     justify-content: space-between;
-}
-
-.header p{
-    margin-top: 0;
+    margin-bottom: 10px;
 }
 
 .header_right{
