--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -2,8 +2,14 @@
     display: flex;
     text-align: center;
     letter-spacing: 2px;
-    width: 358px;
-    margin: 0 auto 1rem auto;
+    margin: 0 25% 1rem 25%;
+}
+
+/* スマホ対応 */
+@media(max-width:768px){
+    .explain{
+        margin: 0 auto 1rem auto;
+    }
 }
 
 .explain div{
@@ -41,8 +47,12 @@
 
 .textarea{
     width: 100%;
-    height: 5rem;
+    min-height: 5rem;
+    height: auto;
     border: 1px #000 solid;
+    padding-left: 10px;
+    font-size: large;
+    white-space: pre-wrap;
 }
 
 li{
