--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -10,10 +10,12 @@
     background-color: #d9d2e9ff;
 }
 
-.form input{
+.form input {
     outline: none;
     border: none;
-    padding: 0;
+    padding-top: 2.2%;
+    display: block;
+    font-size: 16px;
 }
 
 .width{
@@ -25,6 +27,8 @@
     width: 100%;
     height: 5rem;
     border: 1px #000 solid;
+    padding-left: 10px;
+    font-size: large;
 }
 
 li{
