--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -2,8 +2,8 @@
 <div class="frame">
 
     <div class="header">
-        <p>電波</p>
-        <p class="header_right">充電</p>
+        <img src="/wave.png" alt="電波" width="25" height="20">
+        <img class="header_right" src="/battery.png" alt="充電" width="30" height="20">
     </div>
 
     <p id="top_date"></p>
@@ -31,7 +31,7 @@
 
     <div class="btn">
         <%= link_to "/posts/new" do %>
-            Regretメール<br>送信画面へ
+            Regretメール送信画面へ
         <% end %>
     </div>
 
