--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>RegretMail</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <%# 拡大させない %>
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+    <meta name="description" content="他人の後悔を見れる投稿サイトです。ぜひあなたの後悔を投稿してみてください。">
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
