--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -15,27 +15,27 @@
         </div>
         
         <div class="input_frame">
-            <ul class="input_frame_son">
-                <li>宛先：</li>
-                <li class="input"><input class="width" name="name" required maxlength="12"></li>
-            </ul>
+            <label class="input_frame_son">
+                宛先：
+                <input class="width" name="name" required maxlength="12">
+            </label>
         </div>
 
-        <div class="clear input_frame">
-            <ul class="input_frame_son">
-                <li>受信日時：</li>
-                <li class="input"><input type="datetime-local" name="datetime" required></li>
-            </ul>
+        <div class="input_frame">
+            <label class="input_frame_son">
+                受信日時：
+                <input type="datetime-local" name="datetime" required>
+            </label>
         </div>
 
-        <div class="clear input_frame">
-            <ul class="input_frame_son">
-                <li>件名：</li>
-                <li class="input"><input class="width" name="sub" maxlength="12"></li>
-            </ul>
+        <div class="input_frame">
+            <label class="input_frame_son">
+                件名：
+                <input class="width" name="sub" maxlength="12">
+            </label>
         </div>
 
-        <div class="clear">
+        <div>
             <textarea name="content" required maxlength="50"
               placeholder="後悔していることを書いてください。(50文字まで)"></textarea>
         </div>
