--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -13,13 +13,11 @@
 .form input {
     outline: none;
     border: none;
-    padding-top: 2.2%;
-    display: block;
     font-size: 16px;
 }
 
 .width{
-    width: 200px;
+    width: 75%;
 }
 
 .form textarea{
@@ -29,15 +27,6 @@
     border: 1px #000 solid;
     padding-left: 10px;
     font-size: large;
-}
-
-li{
-    list-style: none;
-    float: left;
-}
-
-.clear{
-    clear: both;
 }
 
 .input_frame_son{
