--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,11 @@
 <%= stylesheet_link_tag 'index', :media => "all" %>
 
 <div class="explain">
-    <div>Regretメール一覧</div>
-    <div class="explain2">新しい順</div>
+    <div class="explain1">メール一覧</div>
+    <label class="explain2">
+        <%= link_to "投稿が新しい順 ▼", posts_index_path(latest: "true") %>
+        <%# <%= link_to "投稿が古い順", posts_index_path(old: "true") %>
+    </label>
 </div>
 
 <% @posts.each do |post| %>
