--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,15 @@
 
   <body>
     <header>
-    
+      <%= link_to "/" do %>
+        Regretメール
+      <% end %>
     </header>
+
     <%= yield %>
+    
+    <footer>
+      　
+    </footer>
   </body>
 </html>
