--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -22,10 +22,10 @@
 .explain2{
     border: #000 2px solid;
     background-color: #d9d2e9ff;
-    width: 156px;
+    /* width: 190px; */
     /* 右に押し出される */
     margin-left: auto;
-    padding: 5px 0;
+    padding: 5px 5px;
     cursor: pointer;
 }
 
@@ -67,6 +67,9 @@
     padding-left: 10px;
     font-size: large;
     white-space: pre-wrap;
+
+    /* max-height: 5rem; */
+    /* overflow: hidden; */
 }
 
 li{
