長い本文小さくしまうのに苦戦

--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -68,8 +68,8 @@
     font-size: large;
     white-space: pre-wrap;
 
-    /* max-height: 5rem; */
-    /* overflow: hidden; */
+    max-height: 5rem;
+    overflow: hidden;
 }
 
 li{
