--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -72,6 +72,11 @@
     overflow: hidden;
 }
 
+.show-mores{
+    text-decoration-line: none;
+    color: rgba(0,0,0,1);
+}
+
 li{
     list-style: none;
     float: left;
