送信中モーダル仮表示

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -82,12 +82,12 @@
             // 指定したプロパティが存在するか確認
             if (computedStyle.maxHeight == '80px') {
                 target.style.maxHeight = 'none';
-                console.log(computedStyle.maxHeight);
-                console.log("ifの中入った");
+                // console.log(computedStyle.maxHeight);
+                // console.log("ifの中入った");
             }else{
                 target.style.maxHeight = '5rem';
-                console.log(target.style.maxHeight);
-                console.log("elseの中入った");
+                // console.log(target.style.maxHeight);
+                // console.log("elseの中入った");
             }
         };
         
