--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -38,3 +38,24 @@
     border: 1px #000 solid;
     overflow: auto;
 }
+
+.submit-modal-wrapper {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: none;
+}
+
+.modal {
+    position: absolute;
+    top: 40%;
+    left: 20%;
+    background-color: #e6ecf0;
+    width: 60%;
+    height: 8rem;
+    text-align: center;
+    border: #000 2px solid;
+}
