--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -42,8 +42,17 @@
     </div>
 
     <div class="btn">
-        <input class="submit" type="submit" value="送信">
+        <input id="submit-show" class="submit" type="submit" value="送信">
     </div>
+
+    <div class="submit-modal-wrapper" id="submit-modal">
+    <div class="modal">
+        <p>送信中</p>
+        <p>確認</p>
+    </div>
+    
+    
+  </div>
 
 </div>
 
@@ -66,6 +75,13 @@
         //受信日時のmax属性に今日の日付をセット=今日より過去にしか設定できないようにする
         document.getElementById("reserve_datetime").max = reserve_datetime;
     }
-
     setInterval("formatDate2()", 1000); 
+
+    // 送信中ポップアップ
+    document.querySelector('#submit-show').addEventListener('click', clickHandler2);
+
+    function clickHandler2() {
+        document.querySelector('#submit-modal').style.display = 'block';
+    };
+
 </script>
