--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -7,7 +7,7 @@
 }
 
 .purple{
-    background-color: #d9d2e9ff;
+    background-color: rgb(217, 210, 233);
 }
 
 .form input {
@@ -51,11 +51,41 @@
 
 .modal {
     position: absolute;
-    top: 40%;
+    top: 42%;
     left: 20%;
     background-color: #e6ecf0;
     width: 60%;
-    height: 8rem;
     text-align: center;
     border: #000 2px solid;
+}
+
+.modal-title{
+    background-color: rgb(175, 175, 176);
+    padding: 8px 0;
+    border-bottom: 2px #000 solid;
+    margin: 0;
+}
+
+.submit-gage-ratio{
+    margin: 5px 0 0;
+}
+
+.submit-gage{
+    width: 80%;
+    height: 1.5rem;
+    border: 1px #000 solid;
+    background-color: rgba(175, 175, 176, 0.3);
+    margin: 0 auto 1rem;
+}
+.submit-gage-color{
+    width: 40%;
+    height: 100%;
+    background-color: rgb(188, 176, 214, 1);
+}
+
+.btn{
+    width: 35%;
+}
+.btn a{
+    padding: 0.5rem 1rem;
 }
